# ROVI_Project

./: CMakeLists.txt  Project_PtoP_interpolation.py  README.md  Scene.wc.xml  assimp_log.txt  bottle2_1.ply  interpolation.py  reachabillity.py  rwsettings.xml  scene_no_obstacle.wc.xml  scene_obstacle.wc.xml  visu.rwplay
Headers_M2/: RRT.h  addNoiseToCloud.h  errorOfPose.h  getPointCloud.h  poseEstimate.h  poseEstimatePipeline.h  saveToCSV.h
Headers_M3/: Camera.h  sparceStereo.h
Headers_MotionPlanning/: RRT_planning.h  interpolate_linear.h  interpolate_parabolic.h  saveToCSV.h
Headers_Reachability/: reachability.h
Heardes_M3/: Camera.cpp  Camera.h  sparceStereo.h
Project_WorkCell/: Scene.wc.xml  Scene.wc_Old.xml
RoviSamplePlugin/: CMakeLists.txt  assimp_log.txt  plugin-full-sample.py  rwsettings.xml
csv_data/: P1_RRT_length.csv  P1_RRT_time.csv  P1_length.csv  P1_lin_acc.csv  P1_lin_pos.csv  P1_lin_vel.csv  P1_linear_length.csv  P1_linear_time.csv  P1_para_acc.csv  P1_para_length.csv  P1_para_pos.csv  P1_para_time.csv  P1_para_vel.csv  P1_time.csv  P2_RRT_length.csv  P2_RRT_time.csv  P2_length.csv  P2_linear_length.csv  P2_linear_time.csv  P2_para_length.csv  P2_para_time.csv  P2_time.csv  P3_RRT_length.csv  P3_RRT_time.csv  P3_length.csv  P3_linear_length.csv  P3_linear_time.csv  P3_para_length.csv  P3_para_time.csv  P3_time.csv
csv_files/: error_pos_ang_noice_0.csv  error_pos_ang_noice_100.csv  error_pos_ang_noice_125.csv  error_pos_ang_noice_150.csv  error_pos_ang_noice_25.csv  error_pos_ang_noice_50.csv  error_pos_ang_noice_75.csv
parts/: bottle_pcl.ply
replays/: visu.rwplay  visu0.rwplay  visu1.rwplay  visu2.rwplay  visu_linear0.rwplay  visu_linear1.rwplay  visu_linear2.rwplay  visu_para0.rwplay  visu_para1.rwplay  visu_para2.rwplay
src/: Camera.cpp  PCL.h  RRT.h  RRT_planning.h  addNoiseToCloud.h  add_noice.h  denseStereo.h  errorOfPose.h  getImages.h  interpolate_linear.h  interpolate_parabolic.h  interpolation.cpp  interpolation.h  main.cpp  poseEstimate.h  poseEstimate2.h  preprocessing.h  reachability.h  saveToCSV.h  (+1 more)
(+6 files in other folders)
